[package]
name = "processforlinux"
version = "0.1.0"
edition = "2021"
authors = ["timochan <i@timochan.cn>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.34.0"
regex = "1.10.2"
reqwest = "0.12"
serde_json = "1.0.103"
dbus = "0.7.1"
tokio = { version = "1", features = ["full"] }
zbus = { version = "3", features = ["blocking"] }
chrono = "0.4.31"

[profile.release]
lto = true
