[package]
name = "processforlinux"
version = "0.1.0"
edition = "2021"
authors = ["timochan <i@timochan.cn>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "4.5.49"
reqwest = "0.12"
serde_json = "1.0.103"
dbus = "0.9.9"
tokio = { version = "1", features = ["full"] }
chrono = "0.4.31"
egui = "0.29"
egui_overlay = "0.9.0"

[profile.release]
lto = true
